@@ -1,3 +1,9 @@
+hocr (0.6.4)
+
+ * make memory allocation dinamic in do_ocr
+
+ -- Yaacov Zamir <kzamir@walla.co.il>  Wed, 14 Dec 2005 22:13
+
 hocr (0.6.1)
 
  * code cleanups
